[tool.poetry]
name = "langgraph-agents"
version = "0.1.0"
description = "Learning LangGraph agents"
authors = ["Aysel Dadasheva"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langgraph = "^1.2.0"
langchain = "^1.3.1"
jupyterlab = "^4.0.0"
ipykernel = "^6.0.0"
langchain-openai = "^1.2.1"
python-dotenv = "^1.2.2"
langchain-community = "^0.4.2"
langchain-chroma = "^1.1.0"
chromadb = "^1.5.9"
pypdf = "^6.12.1"
langchain-text-splitters = "^1.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"